# Genbeta-Dev-Engine

./: .gitignore  LICENSE  README.md
builds/cmake/: CMakeLists.txt  Config.cmake
builds/cmake/Modules/: FindSFML.cmake
builds/cmake/doc/: CMakeLists.txt  doxyfile.in
builds/cmake/src/: CMakeLists.txt
builds/codeblocks/: GDE.workspace  GDE.workspace.layout
builds/codeblocks/GDE/: GDE.cbp  GDE.layout
builds/codeblocks/Test/: Test.cbp  Test.layout
builds/codelite/: GDE.workspace
builds/codelite/GDE/: GDE.project
builds/codelite/Test/: Test.project
builds/sublimemingw/: CMakeCache.txt  GDE.sublime-project  GDE.sublime-workspace  cmake_install.cmake
builds/sublimemingw/src/: cmake_install.cmake
builds/vc2013/: GDE.sln
builds/vc2013/GDE/: GDE.vcxproj  GDE.vcxproj.filters
builds/vc2013/Test/: Test.vcxproj  Test.vcxproj.filters
builds/xcode/GDE.xcodeproj/: project.pbxproj
builds/xcode/GDE.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
builds/xcode/GDE/GDE/: GDE-Info.plist
builds/xcode/GDE/GDE.xcodeproj/: project.pbxproj
builds/xcode/GDE/GDE.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
builds/xcode/GDE/GDE.xcodeproj/project.xcworkspace/xcuserdata/sawbona.xcuserdatad/: UserInterfaceState.xcuserstate
builds/xcode/Genbeta Dev Engine.xcworkspace/: contents.xcworkspacedata
builds/xcode/gde-test.xcodeproj/: project.pbxproj
builds/xcode/gde-test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
include/GDE/: Core.hpp
include/GDE/Core/: App.hpp  ConfigCreate.hpp  ConfigReader.hpp  CoreTypes.hpp  Log.hpp  ResourceManager.hpp  Resources.hpp  Scene.hpp  SceneManager.hpp  StringsUtil.hpp  TextureManager.hpp
lib/include/GDE/Core/: App.hpp  ConfigReader.hpp  Scene.hpp
lib/include/GDE/Log/: Log.hpp
src/GDE/Core/: App.cpp  ConfigCreate.cpp  ConfigReader.cpp  Log.cpp  Scene.cpp  SceneManager.cpp  StringUtil.cpp  TextureManager.cpp
src/GDE/include/GDE/: Config.hpp
src/GDE/include/GDE/Core/: ConfigCreate.hpp  Core.hpp  Types.hpp
src/GDE/include/GDE/Core/App/: App.hpp
src/GDE/include/GDE/Core/SceneManager/: SceneManager.hpp
src/GDE/include/GDE/Log/: Log.hpp
src/GDE/include/GDE/Utils/: StringsUtil.hpp
src/GDE/source/Core/: App.cpp  ConfigCreate.cpp  ConfigReader.cpp  Scene.cpp  SceneManager.cpp
src/GDE/source/Core/App/: App.cpp
src/GDE/source/Core/Config/: ConfigCreate.cpp  ConfigReader.cpp
src/GDE/source/Core/SceneManager/: Scene.cpp  SceneManager.cpp
src/GDE/source/Log/: Log.cpp
src/GDE/source/Utils/: StringUtil.cpp
src/Test/: SceneGame.cpp  SceneGame.hpp  SceneMain.cpp  SceneMain.hpp  main.cpp
